--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -9,7 +9,9 @@
     <body>
         <h1>How to make the <em>best</em> Banana Bread</h1>
         <img src="../images/banana-bread.jpg" alt="A picture of banana bread on a wood platter with some bananas in the background" width="800">
-        <p>This recipe is perfect for the case that you have some leftover ripe bananas with which you just don't know what to do.</p>
+       <h2>Description</h2>
+        <p>This recipe is perfect for the case that you have some leftover ripe bananas with which you just don't know what to do. </p>
+        <p>It's a mix of soft and juicy while not being too sweet. If you decide to add some walnuts, the nutty, earthy flavour fits very nicely with the taste of the bananas.</p>
         
 
         <h2>Ingredients</h2>
@@ -24,6 +26,7 @@
             <li>cinnamon</li>
             <li>optional: walnuts</li>
         </ul>
+        <h2>Steps</h2>
         <ol>
             <li>Preheat the oven at 180°. Combine the flour, oil sugar and eggs in a bowl.</li>
             <li>Squish the bananas into a paste using a fork.</li>
